--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     </section>
                 </section>
             </div>
-            
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Gameboy_logo.svg/2560px-Gameboy_logo.svg.png"  height="10px" width="40px">
-           
+            <div class="gameboy-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Gameboy_logo.svg/2560px-Gameboy_logo.svg.png"   width="120px">
+            </div>
             <div id="actions" class="button-container">
                 <div class="toggle">
                     <input type="button"  class="treat-button">
